--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -1,8 +1,9 @@
 {% extends 'chat/base.html' %}
 
+
 {% block content %}
     <h3>You: {{me.username}}</h3>
-    <h3>Thread: {{user.username}}</h3>
+    <h3>User: {{user.username}}</h3>
     <ul>
         {% for message in messages %}
         <li>[{{message.sender.username}}]: {{message.text}}</li>
@@ -14,3 +15,28 @@
         <input type="submit" value="Send" class="btn">
     </form>
 {% endblock content %}
+
+
+{% block custom_javascript %}
+<script>
+
+    const url = 'ws://localhost:8000/ws/chat/';
+    const ws = new WebSocket(url)
+    ws.onopen = function(event) {
+        console.log("connection is opened");
+    };
+
+    ws.onmessage = function(event) {
+        console.log(event);
+        console.log("message is recieved");
+    };
+
+    ws.onclose = function(event) {
+        console.log("connection is closed");
+    };
+
+    ws.onerror = function(event) {
+        console.log("something went wrong");
+    };
+</script>
+{% endblock custom_javascript %}
